# nostr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  append.sh  azazel.py  conteudo_combinado.txt  events.db  exec  meson.build  start  start_server_clients.sh
server/: app.py  config.py  test_db.sqlite
server/tests/: test_utils.py
src/: auth.cpp  auth.hpp  client.cpp  database.cpp  database.hpp  event.cpp  event.hpp  keygen.cpp  keygen.hpp  log.cpp  log.hpp  nostr_client.cpp  nostr_server.cpp  server.cpp
